<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">ABOUT</string>
    <string name="agree">Agree</string>
    <string name="app_name">LEDBadge</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_send_empty">Do not send empty message</string>
    <string name="cannt_open_db">Can not open the database</string>
    <string name="chooise">choose</string>
    <string name="colors">Color</string>
    <string name="connect_success">Connect successful</string>
    <string name="connecting">Connecting device</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">"An unexpected error occurred.
Sorry for the inconvenience."</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="daozi">Reverse</string>
    <string name="data_load_fail">Load data failure</string>
    <string name="delete_pic">DELETE PIC</string>
    <string name="diangzheng11">11 dot matrix</string>
    <string name="diangzheng12">12 dot matrix</string>
    <string name="diangzheng16">16 dot matrix</string>
    <string name="draw_btn">DRAW</string>
    <string name="edit">EDIT</string>
    <string name="edit_pic">EDIT PIC</string>
    <string name="exit">exit</string>
    <string name="flash">Flash</string>
    <string name="gray_pic">[B. W.]</string>
    <string name="ip_all_images">所有图片</string>
    <string name="ip_complete">完成</string>
    <string name="ip_folder_image_count">共%1$d张</string>
    <string name="ip_origin">原图</string>
    <string name="ip_origin_size">原图(%1$s)</string>
    <string name="ip_photo_crop">图片裁剪</string>
    <string name="ip_preview">预览</string>
    <string name="ip_preview_count">预览(%1$d)</string>
    <string name="ip_preview_image_count">%1$d/%2$d</string>
    <string name="ip_select_complete">完成(%1$d/%2$d)</string>
    <string name="ip_select_limit">最多选择%1$d张图片</string>
    <string name="marquee">Marquee</string>
    <string name="mode">Mode</string>
    <string name="msg">Message</string>
    <string name="msg_dianzheng">set port</string>
    <string name="no_data">NO DATA</string>
    <string name="no_device_found">No device found</string>
    <string name="not_get_data">Do not get data cursor</string>
    <string name="not_scan_device">Failed to search device</string>
    <string name="open_ble">Please allow to open Bluetooth</string>
    <string name="open_coarse_location">Please open the positioning permissions manually</string>
    <string name="origin_pic">[ORIGIN]</string>
    <string name="pick_pic">PICK PIC</string>
    <string name="pix">Matrix</string>
    <string name="privacy_dialog_content" formatted="false">Thank you for choosing us! We take your personal information and privacy protection very seriously. In order to better protect your personal rights and interests, please carefully read all terms in the %s and %s before using our products. In particular :1. Our rules and provisions on the collection/storage/use/external provision/protection of your personal information, and your user rights and other provisions; 2. Agree on our limited liability and exemption clauses; 3. Other important terms marked in color or bold. By clicking Agree and continue, you mean that you have read and agree to the above agreement. By clicking Agree and continue, you mean that you have read and agree to the above agreement.</string>
    <string name="privacy_policy">  privacy policy</string>
    <string name="privacy_policy_and_user_agreement">Privacy Policy &amp; User Agreement</string>
    <string name="privacy_policy_tag">《Privacy Policy》</string>
    <string name="reject">Reject</string>
    <string name="reset_btn">RESET</string>
    <string name="return_back">Return</string>
    <string name="reverse_btn">REVERSE</string>
    <string name="same_model_exist">SAME MODEL EXIST</string>
    <string name="save">Save</string>
    <string name="save_Succeed">SUCCESSFUl</string>
    <string name="save_fail">Save failed</string>
    <string name="save_msg_fail">Save message failed</string>
    <string name="save_msg_success">Save message successful</string>
    <string name="save_success">Save successful</string>
    <string name="scan_device_failed">Failed to search device.</string>
    <string name="scroll_btn">SCROLL</string>
    <string name="search_menu_title">Search</string>
    <string name="searching">Searching</string>
    <string name="send">Send</string>
    <string name="send_content">SEND CONTENT</string>
    <string name="send_data_over">Sending data to complete</string>
    <string name="send_failed">Send data failed</string>
    <string name="send_over">Send successful</string>
    <string name="send_timeout">Send data timeout</string>
    <string name="sending_data">Sending data</string>
    <string name="settings">SETTINGS</string>
    <string name="speed">Speed</string>
    <string name="start_scan">Start scan device</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sure">yes</string>
    <string name="title_dianzheng">set port</string>
    <string name="title_sendList">SEND LIST</string>
    <string name="user_agreement">user agreement  </string>
    <string name="user_agreement_tag">《User Agreement》</string>
</resources>
