<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="48.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_back" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/icon_back" android:layout_centerVertical="true" android:layout_marginStart="10.0dip" />
    <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/tv_toolbar_left" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/return_back" android:drawableLeft="@drawable/icon_left" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:id="@id/tv_toolbar_center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit" android:layout_centerInParent="true" />
    <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/tv_right" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/about" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="0.100000024dip" android:layout_alignParentBottom="true" />
</RelativeLayout>