<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/ip_text_primary_inverted" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff282828" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/privacy_policy_and_user_agreement" android:layout_centerHorizontal="true" />
    <ScrollView android:id="@id/sv1" android:layout_width="fill_parent" android:layout_height="220.0dip" android:layout_below="@id/tv_title">
        <TextView android:textSize="13.0sp" android:textColor="#ff282828" android:id="@id/tv_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="15.0dip" android:lineSpacingMultiplier="1.2" />
    </ScrollView>
    <View android:id="@id/view_1" android:background="#ffe7e7e7" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/sv1" />
    <View android:id="@id/view_2" android:background="#ffe7e7e7" android:layout_width="1.0dip" android:layout_height="70.0dip" android:layout_below="@id/view_1" android:layout_centerHorizontal="true" />
    <TextView android:textStyle="bold" android:textColor="#ff282828" android:id="@id/tv_cancel" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginRight="70.0dip" android:layout_marginBottom="15.0dip" android:text="@string/reject" android:layout_toLeftOf="@id/view_2" android:layout_below="@id/view_1" />
    <TextView android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@id/tv_agree" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/agree" android:layout_toRightOf="@id/view_2" android:layout_below="@id/view_1" />
</RelativeLayout>