<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_parent" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:background="@android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="25.0dip" />
    <include layout="@layout/layout_toolbar" />
    <LinearLayout android:orientation="vertical" android:id="@id/rl_pics" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/title_origin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/origin_pic" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/title_bw" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/gray_pic" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/tv_v" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <RelativeLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:id="@id/iv_pic" android:background="#ffffffff" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_centerInParent="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:id="@id/iv_wb" android:background="#ff000000" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_centerInParent="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_sb" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginBottom="0.0dip">
        <SeekBar android:layout_gravity="center_vertical" android:id="@id/sb" android:layout_width="fill_parent" android:layout_height="50.0dip" android:max="100" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    </LinearLayout>
    <LinearLayout android:id="@id/l_leds" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <HorizontalScrollView android:id="@id/hscrollview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="never">
            <LinearLayout android:orientation="horizontal" android:id="@id/ll_leds" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <com.yannis.ledcard.widget.LEDView android:id="@id/led_big" android:layout_width="wrap_content" android:layout_height="250.0dip" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="15.0sp" android:textStyle="normal" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/iv_clear" android:background="@drawable/btn_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/reset_btn" android:layout_weight="1.0" android:layout_marginStart="10.0dip" />
        <Button android:textSize="15.0sp" android:textStyle="normal" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/iv_scroll" android:background="@drawable/btn_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/scroll_btn" android:layout_weight="1.0" android:layout_marginStart="10.0dip" />
        <Button android:textSize="15.0sp" android:textStyle="normal" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/iv_reverse" android:background="@drawable/btn_bg" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/reverse_btn" android:layout_weight="1.0" android:layout_marginStart="10.0dip" />
        <Button android:textSize="15.0sp" android:textStyle="normal" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/iv_save" android:background="@drawable/btn_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/save" android:layout_weight="1.0" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    </LinearLayout>
</LinearLayout>